@@ -1,5 +1,6 @@
 0.18
  - Add TYNOVSKY CPAN account.
+ - Update Module::Install to 1.16 version.
 
 0.17 2015-02-12T19:02:23+01:00
  - Add MICHALS CPAN account.
